[gd_scene load_steps=61 format=4 uid="uid://dt1o1ykyv4j7m"]

[ext_resource type="Script" path="res://Levels/Ship/Map_logic.gd" id="1_cdvu1"]
[ext_resource type="Texture2D" uid="uid://dp7p2xn1f6ch2" path="res://Assets/Ship/WholeShip.png" id="1_uktc8"]
[ext_resource type="PackedScene" uid="uid://rsiho7r5by1s" path="res://Characters/Player/Player.tscn" id="2_ifdeu"]
[ext_resource type="Texture2D" uid="uid://cjvbscrqged4o" path="res://Assets/Ship/Background stars.jpg" id="2_qaaux"]
[ext_resource type="PackedScene" uid="uid://e8o6tr4dhej0" path="res://Levels/Props/ShippingContainer.tscn" id="3_t681x"]
[ext_resource type="PackedScene" uid="uid://c8e64nrrixv3k" path="res://Characters/Captain/Captain.tscn" id="4_i8j3f"]
[ext_resource type="PackedScene" uid="uid://d1n8s1abylrua" path="res://Characters/Npcs/Npc_orange.tscn" id="4_qcatl"]
[ext_resource type="PackedScene" uid="uid://cs2iv3fx87wf8" path="res://Characters/Npcs/Npc_red.tscn" id="5_jcdee"]
[ext_resource type="PackedScene" uid="uid://dofvow5oxdmsw" path="res://Levels/Props/screen_1.tscn" id="9_phslk"]
[ext_resource type="PackedScene" uid="uid://dlero5vxqquxt" path="res://Levels/Props/screen_2.tscn" id="10_gbfp8"]
[ext_resource type="PackedScene" uid="uid://dwdbxlow37coa" path="res://Levels/Props/screen_3.tscn" id="11_qqbms"]
[ext_resource type="PackedScene" uid="uid://cfaoafcdt5ywk" path="res://Levels/Props/consoleDown.tscn" id="12_yo8an"]
[ext_resource type="PackedScene" uid="uid://bjnj3mplxgk4r" path="res://Levels/Props/consoleCorner.tscn" id="13_g7325"]
[ext_resource type="PackedScene" uid="uid://fmcdys80myei" path="res://Levels/Props/shelves.tscn" id="14_sjjgm"]
[ext_resource type="PackedScene" uid="uid://dx6c3ckg05qr0" path="res://Levels/Props/shelvesThick.tscn" id="15_wljyb"]
[ext_resource type="PackedScene" uid="uid://dcrobd1tmrkgg" path="res://Levels/Props/counterTops.tscn" id="16_xbejl"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_v0obu"]
texture = ExtResource("2_qaaux")
0:0/size_in_atlas = Vector2i(120, 67)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_d4lu0"]
sources/1 = SubResource("TileSetAtlasSource_v0obu")

[sub_resource type="SegmentShape2D" id="SegmentShape2D_c6r5k"]
a = Vector2(1, -41)
b = Vector2(1, 575)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_t48pj"]
a = Vector2(93, -35)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_0tg4b"]
b = Vector2(1212, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_al7wy"]
size = Vector2(123, 48)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_yhawk"]
b = Vector2(0, 301)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lwxpy"]
size = Vector2(241, 61)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mhyul"]
size = Vector2(135, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xonqn"]
size = Vector2(132, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qkfmm"]
size = Vector2(221, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_43qhr"]
size = Vector2(102, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7p2hx"]
size = Vector2(96, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h5guq"]
size = Vector2(25, 90)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ltjn1"]
size = Vector2(24, 90)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gokxi"]
size = Vector2(99, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y274d"]
size = Vector2(136, 49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7itjd"]
size = Vector2(48.6666, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iktyn"]
size = Vector2(138, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n7pdd"]
size = Vector2(120, 20)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_7e4j1"]
b = Vector2(0, 301)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_axt1w"]
b = Vector2(99.25, 48.5)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_akk1k"]
b = Vector2(-0.071167, 280.955)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_r4cm6"]
a = Vector2(418.972, 0.424194)
b = Vector2(-63.0282, 0.424194)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_fbo6j"]
b = Vector2(98.8721, 46.6537)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_nnjii"]
a = Vector2(1, 0)
b = Vector2(1.03027, 170.612)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_b0hw2"]
b = Vector2(0, 278)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_37sxf"]
a = Vector2(-0.920532, -0.471497)
b = Vector2(92.0795, -47.4715)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_mciw0"]
a = Vector2(-960, 0)
b = Vector2(262, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_cl7ng"]
b = Vector2(-0.207764, -335.044)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_lgnwi"]
b = Vector2(476, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_r0seg"]
b = Vector2(106.286, -53.3851)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_3joqb"]
b = Vector2(0, -336)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_tlieu"]
b = Vector2(-94, -47)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aq8o5"]
size = Vector2(19, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ufhht"]
size = Vector2(19, 39)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_suj3h"]
size = Vector2(19, 39)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kc7xx"]
size = Vector2(19, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_av3h3"]
size = Vector2(87, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lmk7t"]
size = Vector2(10.2336, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r8dwn"]
size = Vector2(10, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w4iha"]
size = Vector2(11.2041, 28.5638)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5frkp"]
size = Vector2(12.4731, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ej8f"]
size = Vector2(10.9999, 28.8788)

[node name="MainMap" type="Node2D"]
y_sort_enabled = true
position = Vector2(377, 241)
script = ExtResource("1_cdvu1")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
z_index = -1
position = Vector2(-322, -186)
tile_map_data = PackedByteArray("AAC//x0AAQAAAAAAAAA3AB0AAQAAAAAAAACvAB0AAQAAAAAAAACwANr/AQAAAAAAAAA4ANr/AQAAAAAAAADA/9r/AQAAAAAAAAA4AF8AAQAAAAAAACCwAGAAAQAAAAAAACDA/18AAQAAAAAAACA=")
tile_set = SubResource("TileSet_d4lu0")

[node name="TextureRect" type="TextureRect" parent="."]
y_sort_enabled = true
offset_left = -176.0
offset_top = -406.0
offset_right = 1744.0
offset_bottom = 674.0
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_uktc8")

[node name="fuseNodeOne" type="Node2D" parent="."]
position = Vector2(647, 19)
scale = Vector2(1.5, 1.5)

[node name="fuseNodeTwo" type="Node2D" parent="."]
position = Vector2(1804, 199)
scale = Vector2(1.5, 1.5)

[node name="fuseNodeThree" type="Node2D" parent="."]
position = Vector2(1120, 439)
scale = Vector2(1.5, 1.5)

[node name="screenNodeOne" type="Node2D" parent="."]
position = Vector2(551, 26)
scale = Vector2(1.5, 1.5)

[node name="screenNodeTwo" type="Node2D" parent="."]
position = Vector2(795, 302)
scale = Vector2(1.5, 1.5)

[node name="screenNodeThree" type="Node2D" parent="."]
position = Vector2(1209, 253)
scale = Vector2(1.5, 1.5)

[node name="screenNodeFour" type="Node2D" parent="."]
position = Vector2(1587, 206)
scale = Vector2(1.5, 1.5)

[node name="batterySlotNodeOne" type="Node2D" parent="."]
position = Vector2(1063, 47)

[node name="batterySlotNodeTwo" type="Node2D" parent="."]
position = Vector2(943, 47)

[node name="batterySlotNodeThree" type="Node2D" parent="."]
position = Vector2(823, 47)

[node name="batterySlotNodeFour" type="Node2D" parent="."]
position = Vector2(1101, 634)

[node name="controlNodeOne" type="Node2D" parent="."]
position = Vector2(1257, 503)
scale = Vector2(1.5, 1.5)

[node name="controlNodeTwo" type="Node2D" parent="."]
position = Vector2(759, 620)
scale = Vector2(1.5, 1.5)

[node name="batteryNodeOne" type="Node2D" parent="."]
position = Vector2(1562, 457)

[node name="batteryNodeTwo" type="Node2D" parent="."]
position = Vector2(1175.44, 79.8484)

[node name="batteryNodeThree" type="Node2D" parent="."]
position = Vector2(493, 98)

[node name="batteryNodeFour" type="Node2D" parent="."]
position = Vector2(241.146, 564.437)

[node name="ShippingContainer" parent="." instance=ExtResource("3_t681x")]
y_sort_enabled = true
position = Vector2(484, 276)

[node name="ShippingContainer2" parent="." instance=ExtResource("3_t681x")]
y_sort_enabled = true
position = Vector2(336, 276)

[node name="ShippingContainer3" parent="." instance=ExtResource("3_t681x")]
y_sort_enabled = true
position = Vector2(189, 276)

[node name="ShippingContainer4" parent="." instance=ExtResource("3_t681x")]
y_sort_enabled = true
position = Vector2(269, 85)

[node name="ShippingContainer5" parent="." instance=ExtResource("3_t681x")]
y_sort_enabled = true
position = Vector2(417, 84)

[node name="ShippingContainer6" parent="." instance=ExtResource("3_t681x")]
y_sort_enabled = true
position = Vector2(269, 661)

[node name="ShippingContainer7" parent="." instance=ExtResource("3_t681x")]
y_sort_enabled = true
position = Vector2(418, 661)

[node name="ShippingContainer8" parent="." instance=ExtResource("3_t681x")]
y_sort_enabled = true
position = Vector2(484, 468)

[node name="ShippingContainer9" parent="." instance=ExtResource("3_t681x")]
y_sort_enabled = true
position = Vector2(336, 468)

[node name="ShippingContainer10" parent="." instance=ExtResource("3_t681x")]
y_sort_enabled = true
position = Vector2(189, 468)

[node name="Screen1" parent="." instance=ExtResource("9_phslk")]
position = Vector2(939, 446)

[node name="Screen2" parent="." instance=ExtResource("9_phslk")]
position = Vector2(1185, 493)

[node name="Screen3" parent="." instance=ExtResource("9_phslk")]
position = Vector2(1461, 493)

[node name="Screen4" parent="." instance=ExtResource("10_gbfp8")]
position = Vector2(1401, 493)

[node name="Screen5" parent="." instance=ExtResource("10_gbfp8")]
position = Vector2(783, 446)

[node name="Screen6" parent="." instance=ExtResource("10_gbfp8")]
position = Vector2(879, 446)

[node name="Screen7" parent="." instance=ExtResource("11_qqbms")]
position = Vector2(599, 26)

[node name="Screen8" parent="." instance=ExtResource("11_qqbms")]
position = Vector2(694, 26)

[node name="Screen9" parent="." instance=ExtResource("11_qqbms")]
position = Vector2(1659, 206)

[node name="ConsoleDown" parent="." instance=ExtResource("12_yo8an")]
y_sort_enabled = true
position = Vector2(1636, 289)

[node name="ConsoleDown2" parent="." instance=ExtResource("12_yo8an")]
y_sort_enabled = true
position = Vector2(1732, 289)

[node name="ConsoleDown3" parent="." instance=ExtResource("12_yo8an")]
y_sort_enabled = true
position = Vector2(1828, 289)

[node name="ConsoleDown4" parent="." instance=ExtResource("12_yo8an")]
y_sort_enabled = true
position = Vector2(1924, 289)

[node name="borders" type="CharacterBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="borders"]
y_sort_enabled = true
position = Vector2(96, 125)
shape = SubResource("SegmentShape2D_c6r5k")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="borders"]
position = Vector2(97, 73)
shape = SubResource("SegmentShape2D_t48pj")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="borders"]
position = Vector2(190, 38)
shape = SubResource("SegmentShape2D_0tg4b")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="borders"]
position = Vector2(794.5, 292)
shape = SubResource("RectangleShape2D_al7wy")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="borders"]
position = Vector2(733, 38)
shape = SubResource("SegmentShape2D_yhawk")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="borders"]
position = Vector2(856.5, 441.5)
shape = SubResource("RectangleShape2D_lwxpy")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="borders"]
position = Vector2(1433.5, 242)
shape = SubResource("RectangleShape2D_mhyul")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="borders"]
position = Vector2(1216, 242)
shape = SubResource("RectangleShape2D_xonqn")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="borders"]
position = Vector2(1036.5, 292)
shape = SubResource("RectangleShape2D_qkfmm")

[node name="CollisionShape2D10" type="CollisionShape2D" parent="borders"]
position = Vector2(1099, 436)
shape = SubResource("RectangleShape2D_43qhr")

[node name="CollisionShape2D11" type="CollisionShape2D" parent="borders"]
position = Vector2(780, 602)
shape = SubResource("RectangleShape2D_7p2hx")

[node name="CollisionShape2D12" type="CollisionShape2D" parent="borders"]
position = Vector2(839.5, 612)
shape = SubResource("RectangleShape2D_h5guq")

[node name="CollisionShape2D13" type="CollisionShape2D" parent="borders"]
position = Vector2(1040, 612)
shape = SubResource("RectangleShape2D_ltjn1")

[node name="CollisionShape2D14" type="CollisionShape2D" parent="borders"]
position = Vector2(1098.5, 605)
shape = SubResource("RectangleShape2D_gokxi")

[node name="CollisionShape2D15" type="CollisionShape2D" parent="borders"]
position = Vector2(1213, 481.5)
shape = SubResource("RectangleShape2D_y274d")

[node name="CollisionShape2D16" type="CollisionShape2D" parent="borders"]
position = Vector2(1181.5, 504.5)
scale = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_7itjd")

[node name="CollisionShape2D17" type="CollisionShape2D" parent="borders"]
position = Vector2(1435, 481)
shape = SubResource("RectangleShape2D_iktyn")

[node name="CollisionShape2D18" type="CollisionShape2D" parent="borders"]
position = Vector2(1432, 509)
shape = SubResource("RectangleShape2D_n7pdd")

[node name="CollisionShape2D19" type="CollisionShape2D" parent="borders"]
position = Vector2(1147, 37)
shape = SubResource("SegmentShape2D_7e4j1")

[node name="CollisionShape2D20" type="CollisionShape2D" parent="borders"]
position = Vector2(1401.75, 38.5)
shape = SubResource("SegmentShape2D_axt1w")

[node name="CollisionShape2D21" type="CollisionShape2D" parent="borders"]
position = Vector2(1501.07, 87.0455)
shape = SubResource("SegmentShape2D_akk1k")

[node name="CollisionShape2D22" type="CollisionShape2D" parent="borders"]
position = Vector2(1564.03, 220.576)
shape = SubResource("SegmentShape2D_r4cm6")

[node name="CollisionShape2D23" type="CollisionShape2D" parent="borders"]
position = Vector2(1982.13, 221.346)
shape = SubResource("SegmentShape2D_fbo6j")

[node name="CollisionShape2D24" type="CollisionShape2D" parent="borders"]
position = Vector2(2080, 267)
shape = SubResource("SegmentShape2D_nnjii")

[node name="CollisionShape2D25" type="CollisionShape2D" parent="borders"]
position = Vector2(1501, 425)
shape = SubResource("SegmentShape2D_b0hw2")

[node name="CollisionShape2D26" type="CollisionShape2D" parent="borders"]
position = Vector2(1409.92, 747.471)
shape = SubResource("SegmentShape2D_37sxf")

[node name="CollisionShape2D27" type="CollisionShape2D" parent="borders"]
position = Vector2(1147, 747)
shape = SubResource("SegmentShape2D_mciw0")

[node name="CollisionShape2D28" type="CollisionShape2D" parent="borders"]
position = Vector2(1147.21, 747.044)
shape = SubResource("SegmentShape2D_cl7ng")

[node name="CollisionShape2D29" type="CollisionShape2D" parent="borders"]
position = Vector2(1502, 494)
shape = SubResource("SegmentShape2D_lgnwi")

[node name="CollisionShape2D30" type="CollisionShape2D" parent="borders"]
position = Vector2(1977.71, 493.385)
shape = SubResource("SegmentShape2D_r0seg")

[node name="CollisionShape2D31" type="CollisionShape2D" parent="borders"]
position = Vector2(733, 747)
shape = SubResource("SegmentShape2D_3joqb")

[node name="CollisionShape2D32" type="CollisionShape2D" parent="borders"]
position = Vector2(189, 747)
shape = SubResource("SegmentShape2D_tlieu")

[node name="CollisionShape2D33" type="CollisionShape2D" parent="borders"]
position = Vector2(747, 114)
shape = SubResource("RectangleShape2D_aq8o5")

[node name="CollisionShape2D34" type="CollisionShape2D" parent="borders"]
position = Vector2(746.5, 207.5)
shape = SubResource("RectangleShape2D_ufhht")

[node name="CollisionShape2D35" type="CollisionShape2D" parent="borders"]
position = Vector2(1133.5, 110.5)
shape = SubResource("RectangleShape2D_suj3h")

[node name="CollisionShape2D36" type="CollisionShape2D" parent="borders"]
position = Vector2(1133, 206)
shape = SubResource("RectangleShape2D_kc7xx")

[node name="CollisionShape2D37" type="CollisionShape2D" parent="borders"]
position = Vector2(1277.5, 113)
shape = SubResource("RectangleShape2D_av3h3")

[node name="CollisionShape2D38" type="CollisionShape2D" parent="borders"]
position = Vector2(2045.88, 375.5)
shape = SubResource("RectangleShape2D_lmk7t")

[node name="CollisionShape2D39" type="CollisionShape2D" parent="borders"]
position = Vector2(1949, 451)
shape = SubResource("RectangleShape2D_r8dwn")

[node name="CollisionShape2D40" type="CollisionShape2D" parent="borders"]
position = Vector2(1829.6, 450.282)
shape = SubResource("RectangleShape2D_w4iha")

[node name="CollisionShape2D41" type="CollisionShape2D" parent="borders"]
position = Vector2(1734.24, 450)
shape = SubResource("RectangleShape2D_5frkp")

[node name="CollisionShape2D42" type="CollisionShape2D" parent="borders"]
position = Vector2(1637.5, 450.439)
shape = SubResource("RectangleShape2D_8ej8f")

[node name="Npc_orange" parent="." instance=ExtResource("4_qcatl")]
position = Vector2(500, 602)

[node name="Npc_red" parent="." instance=ExtResource("5_jcdee")]
position = Vector2(454, 576)

[node name="InternSpawnPoint" type="Node2D" parent="."]
position = Vector2(1880, 351)
scale = Vector2(1.25, 1.25)

[node name="Captain" parent="." instance=ExtResource("4_i8j3f")]
position = Vector2(1942, 345)

[node name="ConsoleCorner" parent="." instance=ExtResource("13_g7325")]
position = Vector2(2019, 307)

[node name="Shelves" parent="." instance=ExtResource("14_sjjgm")]
y_sort_enabled = true
position = Vector2(1322, 629)

[node name="Player" parent="." instance=ExtResource("2_ifdeu")]
y_sort_enabled = true
position = Vector2(1942, 386)

[node name="ShelvesThick" parent="." instance=ExtResource("15_wljyb")]
position = Vector2(1192, 628)

[node name="ShelvesThick2" parent="." instance=ExtResource("15_wljyb")]
position = Vector2(1458, 629)

[node name="CounterTops" parent="." instance=ExtResource("16_xbejl")]
position = Vector2(844, 218)

[node name="CounterTops2" parent="." instance=ExtResource("16_xbejl")]
position = Vector2(1036, 218)

[node name="CounterTops3" parent="." instance=ExtResource("16_xbejl")]
position = Vector2(844, 121)

[node name="CounterTops4" parent="." instance=ExtResource("16_xbejl")]
position = Vector2(1036, 122)

[node name="Npc_orange2" parent="." instance=ExtResource("4_qcatl")]
position = Vector2(1050, 184)

[node name="Npc_orange3" parent="." instance=ExtResource("4_qcatl")]
position = Vector2(857, 127)

[node name="Npc_red2" parent="." instance=ExtResource("5_jcdee")]
position = Vector2(1013, 184)

[node name="Npc_red3" parent="." instance=ExtResource("5_jcdee")]
position = Vector2(823, 127)

[node name="Npc_orange4" parent="." instance=ExtResource("4_qcatl")]
position = Vector2(888, 506)

[node name="Npc_red4" parent="." instance=ExtResource("5_jcdee")]
position = Vector2(845, 503)

[node name="Npc_red5" parent="." instance=ExtResource("5_jcdee")]
position = Vector2(1112, 707)

[node name="Npc_orange5" parent="." instance=ExtResource("4_qcatl")]
position = Vector2(780, 710)

[node name="Npc_red6" parent="." instance=ExtResource("5_jcdee")]
position = Vector2(1253, 152)

[node name="Npc_orange6" parent="." instance=ExtResource("4_qcatl")]
position = Vector2(1297, 151)

[node name="Npc_red7" parent="." instance=ExtResource("5_jcdee")]
position = Vector2(1254, 68)

[node name="Npc_orange7" parent="." instance=ExtResource("4_qcatl")]
position = Vector2(1296, 69)

[node name="Npc_orange8" parent="." instance=ExtResource("4_qcatl")]
position = Vector2(1335, 109)

[node name="Npc_orange9" parent="." instance=ExtResource("4_qcatl")]
position = Vector2(1634, 311)

[node name="Npc_orange10" parent="." instance=ExtResource("4_qcatl")]
position = Vector2(1730, 311)

[node name="Npc_red9" parent="." instance=ExtResource("5_jcdee")]
position = Vector2(1999, 325)

[node name="Npc_orange11" parent="." instance=ExtResource("4_qcatl")]
position = Vector2(1425, 288)

[node name="Npc_red10" parent="." instance=ExtResource("5_jcdee")]
position = Vector2(1452, 289)

[node name="Npc_red11" parent="." instance=ExtResource("5_jcdee")]
position = Vector2(1409, 542)

[node name="Npc_orange12" parent="." instance=ExtResource("4_qcatl")]
position = Vector2(1442, 548)

[node name="Npc_red14" parent="." instance=ExtResource("5_jcdee")]
position = Vector2(1169, 647)

[node name="Npc_red15" parent="." instance=ExtResource("5_jcdee")]
position = Vector2(316, 340)

[node name="Npc_red16" parent="." instance=ExtResource("5_jcdee")]
position = Vector2(310, 370)

[node name="Npc_orange13" parent="." instance=ExtResource("4_qcatl")]
position = Vector2(358, 361)

[node name="Npc_red17" parent="." instance=ExtResource("5_jcdee")]
position = Vector2(690, 50)

[node name="Npc_orange14" parent="." instance=ExtResource("4_qcatl")]
position = Vector2(604, 42)

[node name="Npc_orange15" parent="." instance=ExtResource("4_qcatl")]
position = Vector2(1048, 333)

[node name="Npc_red18" parent="." instance=ExtResource("5_jcdee")]
position = Vector2(999, 332)

[node name="Npc_red8" parent="." instance=ExtResource("5_jcdee")]
position = Vector2(1436, 73)
